<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/HelloFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color_tertiary"
    tools:context=".auth.HelloFragment">

    <ImageView
        android:id="@+id/logo_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/ic_logo_small"
        app:layout_constraintBottom_toTopOf="@id/hello_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hello_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="@dimen/screen_padding">

        <TextView
            android:id="@+id/text_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_to_user"
            android:textAlignment="center"
            android:textAppearance="@style/LabelTextTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_hello_invitation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/message_to_user"
            android:textAlignment="center"
            android:textAppearance="@style/SimpleTextTheme"
            app:layout_constraintTop_toBottomOf="@id/text_hello" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_entry"
            android:layout_marginTop="40dp"
            android:text="@string/entry"
            app:layout_constraintEnd_toEndOf="@id/text_hello_invitation"
            app:layout_constraintStart_toStartOf="@id/text_hello_invitation"
            app:layout_constraintTop_toBottomOf="@id/text_hello_invitation"
            style="@style/EnterButtonStyle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/selector_enter_button_additional"
            android:text="@string/registration"
            android:textAppearance="@style/ButtonTextTheme"
            android:textColor="?attr/text_color_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btn_entry"
            app:layout_constraintStart_toStartOf="@id/btn_entry"
            app:layout_constraintTop_toBottomOf="@id/btn_entry" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

