<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.UserDataFragment"
    android:background="?attr/background_color_tertiary">

    <ImageView
        android:id="@+id/logo_acc_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_small"
        app:layout_constraintBottom_toTopOf="@id/user_data_container"
        app:layout_constraintStart_toStartOf="@id/user_data_container"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_logo_reg_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/logo_padding"
        android:text="@string/registration"
        android:textAppearance="@style/LabelTextTheme"
        app:layout_constraintBottom_toBottomOf="@id/logo_acc_reg"
        app:layout_constraintStart_toEndOf="@id/logo_acc_reg" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_data_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_surname_reg_data"
            android:text="@string/surname_enter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/SmallTextLabelView" />

        <EditText
            android:id="@+id/edit_name_reg_data"
            style="@style/SmallEditTextStyle"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_surname_reg_data" />

        <TextView
            android:id="@+id/text_name_reg_data"
            android:text="@string/name_enter"
            app:layout_constraintStart_toStartOf="@id/edit_name_reg_data"
            app:layout_constraintTop_toBottomOf="@id/edit_name_reg_data"
            style="@style/SmallTextLabelView" />

        <EditText
            android:id="@+id/edit_surname_reg_data"
            android:inputType="text"
            app:backgroundTint="?attr/background_color_primary"
            app:layout_constraintStart_toStartOf="@id/text_name_reg_data"
            app:layout_constraintTop_toBottomOf="@id/text_name_reg_data"
            style="@style/SmallEditTextStyle"/>

        <TextView
            android:id="@+id/text_second_name_reg_data"
            android:text="@string/second_name_enter"
            app:layout_constraintStart_toStartOf="@id/edit_surname_reg_data"
            app:layout_constraintTop_toBottomOf="@id/edit_surname_reg_data"
            style="@style/SmallTextLabelView" />

        <EditText
            android:id="@+id/edit_second_name_reg_data"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@id/text_second_name_reg_data"
            app:layout_constraintTop_toBottomOf="@id/text_second_name_reg_data"
            style="@style/SmallEditTextStyle"/>

        <TextView
            android:id="@+id/text_date"
            android:text="@string/date_enter"
            app:layout_constraintStart_toStartOf="@id/edit_second_name_reg_data"
            app:layout_constraintTop_toBottomOf="@id/edit_second_name_reg_data"
            style="@style/SmallTextLabelView" />

        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/edit_date_reg_data"
            android:inputType="date"
            app:mask="**.**.****"
            app:maskCharacter="*"
            app:maskStyle="completable"
            app:layout_constraintStart_toStartOf="@id/text_date"
            app:layout_constraintTop_toBottomOf="@id/text_date"
            style="@style/SmallEditTextStyle"/>

        <TextView
            android:id="@+id/text_gender"
            android:text="@string/gender_enter"
            app:layout_constraintStart_toStartOf="@id/edit_date_reg_data"
            app:layout_constraintTop_toBottomOf="@id/edit_date_reg_data"
            style="@style/SmallTextLabelView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gender_button_padding"
            android:background="@drawable/selector_button_gender"
            android:text="@string/male_gender"
            android:textAppearance="@style/SmallButtonTheme"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_gender" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gender_button_padding"
            android:background="@drawable/selector_button_gender"
            android:text="@string/female_gender"
            android:textAppearance="@style/SmallTextTheme"
            app:layout_constraintEnd_toEndOf="@id/edit_date_reg_data"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@id/text_gender" />

        <TextView
            android:id="@+id/text_city_reg_data"
            android:layout_marginTop="10dp"
            android:text="@string/city_enter"
            app:layout_constraintStart_toStartOf="@+id/text_gender"
            app:layout_constraintTop_toBottomOf="@id/btn_female"
            style="@style/SmallTextLabelView" />

        <AutoCompleteTextView
            android:id="@+id/edit_city_reg_data"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/bg_enter_city"
            android:textAppearance="@style/SmallTextTheme"
            android:completionThreshold="1"
            android:dropDownHeight="wrap_content"
            android:dropDownWidth="wrap_content"
            android:dropDownVerticalOffset="@dimen/input_city_offset"
            app:layout_constraintStart_toStartOf="@id/text_city_reg_data"
            app:layout_constraintTop_toBottomOf="@id/text_city_reg_data" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="?attr/color_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_city_reg_data" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_arrow_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_data_container" />

</androidx.constraintlayout.widget.ConstraintLayout>
