<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color_tertiary"
    tools:context=".auth.ChooseRoleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/role_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/choose_profile_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/choose_role"
            android:textAlignment="center"
            android:textAppearance="@style/LabelTextTheme"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/doctor_btn"
            android:layout_marginTop="40dp"
            android:text="@string/doctor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choose_profile_text"
            style="@style/ChooseRoleButtonStyle"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/patient_btn"
            android:layout_marginTop="10dp"
            android:text="@string/patient"
            app:layout_constraintEnd_toEndOf="@id/doctor_btn"
            app:layout_constraintStart_toStartOf="@id/doctor_btn"
            app:layout_constraintTop_toBottomOf="@id/doctor_btn"
            style="@style/ChooseRoleButtonStyle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
