<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.EnterFragment"
    android:background="?attr/background_color_tertiary">

    <ImageView
        android:id="@+id/logo_acc_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_small"
        app:layout_constraintBottom_toTopOf="@+id/account_registration_layout"
        app:layout_constraintStart_toStartOf="@+id/account_registration_layout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_logo_reg_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/logo_padding"
        android:text="@string/registration"
        android:textAppearance="@style/LabelTextTheme"
        app:layout_constraintBottom_toBottomOf="@id/logo_acc_reg"
        app:layout_constraintStart_toEndOf="@id/logo_acc_reg" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/account_registration_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_phone_reg"
            android:text="@string/phone_enter"
            app:layout_constraintStart_toStartOf="@id/edit_phone_reg"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/SmallTextLabelView" />

        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/edit_phone_reg"
            style="@style/PhoneMaskStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_phone_reg"/>

        <TextView
            android:id="@+id/text_password_reg"
            android:text="@string/new_password_enter"
            app:layout_constraintBottom_toTopOf="@id/edit_password_reg"
            app:layout_constraintStart_toStartOf="@id/edit_phone_reg"
            style="@style/SmallTextLabelView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_password_reg"
            android:layout_marginTop="32dp"
            style="@style/TextInputLayoutStyle"
            app:layout_constraintStart_toStartOf="@id/text_password_reg"
            app:layout_constraintTop_toBottomOf="@id/edit_phone_reg" >

            <com.google.android.material.textfield.TextInputEditText
                style="@style/PasswordEditTextStyle" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_password_second_reg"
            android:text="@string/new_password_enter2"
            app:layout_constraintBottom_toTopOf="@id/edit_password_second_reg"
            app:layout_constraintStart_toStartOf="@id/edit_password_reg"
            style="@style/SmallTextLabelView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_password_second_reg"
            android:layout_marginTop="32dp"
            style="@style/TextInputLayoutStyle"
            app:layout_constraintStart_toStartOf="@id/edit_password_reg"
            app:layout_constraintTop_toBottomOf="@id/edit_password_reg">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/PasswordEditTextStyle" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkbox_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="?attr/background_color_primary"
            android:text="@string/checkbox_text"
            android:textAppearance="@style/SmallTextTheme"
            android:textColor="@null"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/edit_password_second_reg"
            app:layout_constraintTop_toBottomOf="@id/edit_password_second_reg" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/entry_button_to_main_menu"
        android:text="@string/invitation_to_registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/account_registration_layout"
        app:layout_constraintStart_toStartOf="@+id/account_registration_layout"
        app:layout_constraintTop_toBottomOf="@+id/account_registration_layout"
        style="@style/EnterButtonStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>
