<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.EnterFragment"
    android:background="@color/background_blue">

    <Button
        android:id="@+id/EntryButtonToMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_button"
        android:text="@string/invitation_to_entry"
        android:textAppearance="@style/button_text"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/PasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password_enter"
        android:textAppearance="@style/small_text"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <View
        android:id="@+id/union2"
        android:layout_width="50dp"
        android:layout_height="28.66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/ic_small_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LogoTextRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="252dp"
        android:fontFeatureSettings="pnum, lnum"
        android:gravity="center_vertical"
        android:text="@string/entry"
        android:textAppearance="@style/label_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:ems="12"
        android:inputType="phone"
        android:textColor="@color/white"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoTextRegistration" />

    <TextView
        android:id="@+id/phoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/phone_enter"
        android:textAppearance="@style/small_text"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
        app:layout_constraintTop_toBottomOf="@+id/LogoTextRegistration" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:drawableEnd="@drawable/ic_password"
        android:drawableTint="@color/white"
        android:ems="10"
        android:gravity="top"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:fontFeatureSettings="pnum, lnum"
        android:gravity="end|top"
        android:text="@string/forgot_password"
        android:textAppearance="@style/small_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EntryButtonToMainMenu" />

    <TextView
        android:id="@+id/invitation_to_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:fontFeatureSettings="pnum, lnum"
        android:gravity="end|top"
        android:text="@string/invitation_to_registration_underline"
        android:textAppearance="@style/small_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

</androidx.constraintlayout.widget.ConstraintLayout>
